<resources>
    <string name="app_name">Quiz App</string>
    <string name="quiz_app">Quiz App</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="enter_e_mail">Enter E-mail</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="phone">Phone</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="i_m_already_a_member">I\'m already a member .</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="i_m_new_user">I\'m a new user</string>
    <string name="last_name">Last Name</string>
    <string name="about_us">About Us</string>
    <string name="back">Back</string>
    <string name="sign_out">Sign Out</string>
</resources>